# llm_test

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  DESIGN.md  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  test_case.md  test_case.yml
api/: Cargo.toml  README.md  schema.sql  wrangler.toml  wrangler.toml.example
api/src/: auth.rs  db.rs  error.rs  handlers.rs  lib.rs  models.rs  state.rs
api/src/db/: models.rs  rate_limit.rs  submissions.rs  users.rs  website_models.rs  websites.rs
api/src/handlers/: auth.rs  proxy.rs  rankings.rs  submit.rs
api/src/models/: auth.rs  config.rs  db_rows.rs  detail.rs  rankings.rs  submission.rs
front/: .env.example  .env.production  README.md  index.html  package-lock.json  package.json  vite.config.ts
front/src/: App.vue  main.ts
front/src/api/: auth.ts  client.ts  models.ts  rankings.ts  submissions.ts
front/src/components/home/: ApiConfigPanel.vue  ScoreBoard.vue  SubmitPanel.vue  TestCaseAccordion.vue  TestRunner.vue
front/src/engine/: efficiency.ts  runner.ts  scoring.ts  sdk-client.ts
front/src/router/: index.ts
front/src/stores/: auth.ts  rankings.ts  test.ts
front/src/styles/: base.css  components.css  variables.css
front/src/types/: api.ts  scoring.ts  test-suite.ts
front/src/utils/: crypto.ts  domain.ts  format.ts
front/src/views/: AboutPage.vue  AuthCallbackPage.vue  HomePage.vue  ModelDetailPage.vue  RankingsPage.vue  WebsiteDetailPage.vue
(+12 files in other folders)
