[package]
name = "llm-test-api"
version = "0.1.0"
edition = "2021"
authors = ["nihilityer <nihilityer@mail.nihilityer.top>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8", features = ['http', 'axum', 'd1'] }
axum = { version = "0.8", default-features = false, features = ["json", "query", "macros"] }
tower-service = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
thiserror = { version = "2.0", default-features = false }
sha2 = "0.11"
hmac = "0.13"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "js"] }
bytes = "1"
